fix some spacings

--- a/src/styles/modules/_icons.scss
+++ b/src/styles/modules/_icons.scss
@@ -7,9 +7,8 @@
     width: 50%;
     font-size: 0.8rem;
     line-height: 1rem;
-    font-weight: bold;
     text-align: center;
-    margin: 0 0 2rem;
+    margin-bottom: 2rem;
 
     img {
       width: 33%;
@@ -22,10 +21,6 @@
   .icon-wrapper {
     .icon-item {
       width: 33%;
-
-      // img {
-      //   width: 33%;
-      // }
     }
   }
 }
